Version 3.2 (X X, 2018) - ""
------------------------------------------------------------------------------
*** CORE/CPU ***

*** ROM SUPPORT *** Thanks to 



Version 3.1 (July 29th, 2018) - "Flippin' fast"
------------------------------------------------------------------------------
*** CORE/CPU ***
Fix wrong gain/volume of voices/sound effects in Sound Mode 1 (i.e. builtin alternate sound file support)
Further improve M114 sound core (Mr. Game)
Add save credits support for Bow & Arrow
Fix neverending sounds on LTD system 4 games, added sound support for Cowboy Eight Ball and Zephy
Fix S.A.M. PulseSolState (needed for mech) and bug in Family Guy mini-playfield lights and move the (non-modulated) LED outputs in Tron LE that occupied columns 8 and 9 so far (i.e. disabling the start button lamps) to cols 11 and 12
Implement 'fast flips' support for some S.A.M. games: Recommended table implementation is to use direct/fast flipper flips when solenoid 33 is on, but to respond to the standard flipper solenoids when 33 is off
 (acd_168h, acd_170, acd_170h, avr_200, avs_170, bbh_170, bdk_294, csi_240, fg_1200, ij4_210, im_183ve, mt_145h, mtl_170h, nba_802, potc_600, rsn_110h, shr_141, smanve_101, st_161h, tf_180, tf_180h, trn_174h, twd_160, twd_160h, twenty4_150, wof_500, wpt_140a, xmn_151h)
Implement proper 'fast flips' support for some WPC-S games: Still uses solenoid 31
 (WHO Dunnit)
Implement 'fast flips' support for most WPC-95 games: Takes over solenoid 31, so is compatible with the existing VP core scribts UseSolenoids=2 implementation
 (Attack from Mars, Cactus Canyon, Champion Pub, Cirqus Voltaire, Congo, Fish Tales, Junk Yard, Medieval Madness, Monster Bash, NBA Fastbreak, No Good Go(l)fers, Safe Cracker, Scared Stiff, Tales of the Arabian Nights)
Implement 'fast flips' support for most Whitestar games: Uses solenoid 15